# anomaly-detection-hydraulic-systems

./: .gitignore  LICENSE  README.md  pyproject.toml
documents/: ETL Paper presentation.pptx  Formular_Anmeldung_MSc_Forsch_APE_Caipo.docx  Test 1 presentation.pptx  ~$ETL Paper presentation.pptx
drawings/: PLANO-HID-2.bak  PLANO-HID-2.dwg
images/: dataflows.drawio  dataflows_summ.drawio  production_manager.drawio  production_manager_summ.drawio
papers/: related work manuel.txt
tables/: Plantilla Codificación Componentes Sintomas.xlsx
tables/Análisis de fallas recurrentes - Jack Knife/: Fallas más importantes por equipo.xlsx  Reliability Team - Jack Knife Diagrama C1 2020_2021.pptx  Texto Estructurado C1 2020-202105.xlsx
